add div.header contento o h1 no header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <div class="content">
       <header>
-        <h1>Polaris<span>Tech</span></h1>
+        <div class="header">
+          <h1>Polaris<span>Tech</span></h1>
+        </div>
       </header>
 
       <div id="image"></div>
@@ -36,7 +38,5 @@
         </div>
       </main>
     </div>
-
-    <script src="main.js"></script>
   </body>
 </html>
