--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="https://raw.githubusercontent.com/JeanCarlosHP/polaris-tech/master/img/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="content">
