add div.stars no main

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
       </header>
 
       <div id="image"></div>
-      <div id="stars"></div>
+      <div class="stars"></div>
 
       <main>
         <div class="container">
+          <div class="stars"></div>
           <h2>Login</h2>
           <input id="user" type="text" placeholder="User" />
           <input id="pass" type="text" placeholder="Password" />
