--- a/index.html
+++ b/index.html
@@ -33,18 +33,23 @@
       </header>
 
       <div id="image"></div>
-      <div class="stars"></div>
 
       <main>
         <div class="container">
-          <div class="stars"></div>
           <h2>Login</h2>
-          <input id="user" type="text" placeholder="User" />
-          <input id="pass" type="text" placeholder="Password" />
+          <input id="user" type="text" placeholder="User" autocomplete="off" />
+          <input
+            id="pass"
+            type="text"
+            placeholder="Password"
+            autocomplete="off"
+          />
           <button><a href="#"></a>Login</button>
           <p><a href="#">Forgot your password?</a></p>
         </div>
       </main>
     </div>
+
+    <script src="stars.js"></script>
   </body>
 </html>
