importação do modulo Main

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       </main>
     </div>
 
-    <script src="stars.js"></script>
+    <script type="module">
+      import { Main } from './src/Main.js'
+
+      Main.start()
+    </script>
   </body>
 </html>
