--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <main>
         <div class="container">
           <h2>Login</h2>
+          <div class="invalid-credencial">
+            <p>User or password is invalid.<br />Check and try again</p>
+          </div>
           <input id="user" type="text" placeholder="User" autocomplete="off" />
           <input
             id="pass"
@@ -44,7 +47,7 @@
             placeholder="Password"
             autocomplete="off"
           />
-          <button><a href="#"></a>Login</button>
+          <button id="login"><a href="#"></a>Login</button>
           <p><a href="#">Forgot your password?</a></p>
         </div>
       </main>
